<resources>
<string name="app_name">Security Defender</string>
<string name="title_passwords">Passwords</string>
<string name="title_notes">Notes</string>
<string name="title_password_generator">Password Generator</string>
<string name="prompt_email">Email</string>
<string name="prompt_password">Password</string>
<string name="action_sign_in">Sign in or register</string>
<string name="action_sign_in_short">Sign in</string>
<string name="welcome">"Welcome !"</string>
<string name="invalid_username">Not a valid username</string>
<string name="invalid_password">Password must be >5 characters</string>
<string name="login_failed">"Login failed"</string>
<string name="new_password">New Password</string>
<string name="username">Username</string>
<string name="username_colon">Username:</string>
<string name="password_colon">Password:</string>
<string name="website">Website</string>
<string name="create">Create</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
    </string>
</resources>