<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_passwords">

    <fragment
        android:id="@+id/navigation_passwords"
        android:name="com.ualr.securitydefender.ui.passwords.PasswordsFragment"
        android:label="@string/title_passwords"
        tools:layout="@layout/fragment_passwords" />

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.ualr.securitydefender.ui.notes.NotesFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/navigation_password_generator"
        android:name="com.ualr.securitydefender.ui.passwordgenerator.PasswordGeneratorFragment"
        android:label="@string/title_password_generator"
        tools:layout="@layout/fragment_password_generator" />
</navigation>