<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:id="@+id/fragment_password_add"
    tools:context="ui.passwords.NewPasswordFragment"
    >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/new_website_edittext"
        android:layout_width="274dp"
        android:layout_height="41dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_website_textview" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/new_password_textview"
        android:layout_width="271dp"
        android:layout_height="21dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/prompt_password"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/new_password_edittext"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_username_edittext" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_password_create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:background="#F10000"
        android:backgroundTint="#EDEDED"
        android:backgroundTintMode="src_over"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:backgroundTint="#EDEDED"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_website_edittext" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/new_password_edittext"
        android:layout_width="274dp"
        android:layout_height="41dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/new_website_textview"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_password_textview" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/new_username_textview"
        android:layout_width="274dp"
        android:layout_height="20dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/username"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/new_username_edittext"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_password_title_textview" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/new_website_textview"
        android:layout_width="269dp"
        android:layout_height="21dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="44dp"
        android:text="@string/website"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/new_website_edittext"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_password_edittext" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/new_password_title_textview"
        android:layout_width="273dp"
        android:layout_height="32dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_password"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/new_username_textview"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/new_username_edittext"
        android:layout_width="274dp"
        android:layout_height="41dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="7dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_username_textview" />

</androidx.constraintlayout.widget.ConstraintLayout>